[package]
name = "drag_bt"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
anyhow = "1.0"
reqwest = { version = "0.12.5", features = ["json"] }

[features]
default = []
with-wasm = ["wasm-bindgen", "web-sys", "yew"]
no-wasm = ["axum", "tokio"]

[dependencies.axum]
version = "0.7.5"
optional = true

[dependencies.tokio]
version = "1.38.0"
features = ["rt", "rt-multi-thread"]
optional = true

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.web-sys]
version = "0.3.67"
features = [
    "Document",
    "Window",
    "HtmlSelectElement",
]
optional = true

[dependencies.yew]
version = "0.21.0"
optional = true
features = ["csr"]



[lib]
crate-type = ["cdylib", "rlib"]
